--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/gopal9492/simplesignup#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "joi": "^17.4.0",
     "mongoose": "^5.13.2"
   }
 }
